# python-project-lvl4

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml
task_manager/: settings.py  urls.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/templates/: base.html  index.html
