[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ilyas <ilyasers@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.10"
Django = "^4.0.2"
python-dotenv = "^0.19.2"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
django-bootstrap4 = "^21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
